making changes for autobuild
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@3975 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/Simias.dll/Makefile.am
+++ b/simias/src/Simias.dll/Makefile.am
@@ -45,7 +45,7 @@ DEBUG_FILES = Simias.pdb
 endif
 endif
 
-install-exec-local: Simias.dll
+install-exec-local: all
 	$(mkinstalldirs) $(DESTDIR)$(webbindir) $(DESTDIR)$(sysconfdir) $(DESTDIR)$(datadir)/simias
 	$(INSTALL_PROGRAM) Simias.dll $(DEBUG_FILES) $(DESTDIR)$(webbindir)
 	$(INSTALL_PROGRAM) $(srcdir)/$(MDNSRESPONDER_DIR)/m*.exe $(MDNSRESPONDER_DIR)/m*.dll $(DESTDIR)$(webbindir)
