making changes for autobuild
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@3976 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/Makefile.am
+++ b/ifolder/Makefile.am
@@ -31,7 +31,7 @@ msvcr71d.dll:	$(MSVCR_DEBUG_DLL)
 endif
 endif
 
-install-exec-local: $(ADDITIONAL_LIB_FILES)
+install-exec-local: all $(ADDITIONAL_LIB_FILES)
 	$(mkinstalldirs) $(DESTDIR)$(libdir)/pkgconfig $(DESTDIR)$(datadir)/$(PACKAGE)
 	$(INSTALL_PROGRAM) $(srcdir)/COPYING $(DESTDIR)$(datadir)/$(PACKAGE)
 	$(INSTALL_PROGRAM) $(PACKAGE)*.pc $(DESTDIR)$(libdir)/pkgconfig
