--- a/simias/configure.in
+++ b/simias/configure.in
@@ -167,6 +167,10 @@ case $SIMIAS_OS in
 		GSOAP_PATH="$TOOLDIR/gsoap/macosx-2.7"
 		#StoreProviderAssembly="SqliteProvider.dll"
 		#StoreProviderType="Simias.Storage.Provider.Sqlite.SqliteProvider"
+    	bindir='${exec_prefix}'
+    	sbindir='${exec_prefix}'
+    	libexecdir='${exec_prefix}'
+    	libdir='${exec_prefix}'
     ;;
     #
     # Linux-specific configuration
@@ -203,6 +207,10 @@ case $SIMIAS_OS in
 		StoreProviderAssembly="Simias.dll"
 		StoreProviderType="Simias.Storage.Provider.Flaim.FlaimProvider"
 		GSOAP_PATH="$TOOLDIR/gsoap/linux-2.7"
+    	bindir='${exec_prefix}'
+    	sbindir='${exec_prefix}'
+    	libexecdir='${exec_prefix}'
+    	libdir='${exec_prefix}'
     ;;
     #
     # Windows-specific configuration
@@ -258,6 +266,7 @@ case $SIMIAS_OS in
         RC='rc'
         RC_FLAGS='-r'
         REPORT_DIR='$(shell cygpath --windows $(DESTDIR)$(webbindir) | sed ''s,\\\\,/,g'')'
+        
         REPORT_EXE='$(top_srcdir)/tools/Report/Report.exe'
         RES_EXT='.res'
         SEP='$(EMPTY)\\$(EMPTY)'
@@ -270,12 +279,12 @@ case $SIMIAS_OS in
         #
     	# Override Linux-like directory structure
         #
-    	bindir='${exec_prefix}'
-    	sbindir='${exec_prefix}'
-    	libexecdir='${exec_prefix}'
-    	libdir='${exec_prefix}'
-		StoreProviderAssembly='Simias.dll'
-		StoreProviderType='Simias.Storage.Provider.Flaim.FlaimProvider'
+    	bindir='$(shell cygpath --mixed ${exec_prefix}'
+    	sbindir='$(shell cygpath --mixed ${exec_prefix}'
+    	libexecdir='$(shell cygpath --mixed ${exec_prefix}'
+    	libdir='$(shell cygpath --mixed ${exec_prefix}'
+		StoreProviderAssembly="Simias.dll"
+		StoreProviderType="Simias.Storage.Provider.Flaim.FlaimProvider"
     ;;
 esac
 AC_SUBST(CDEF)
