--- a/simias/src/Common/simias-client-bootstrap.config.in
+++ b/simias/src/Common/simias-client-bootstrap.config.in
@@ -1,8 +1,9 @@
 <configuration>
   <section name="ServiceManager">
-	<setting name="WebServicePath" value="@_webdir_@" />
-    <setting name="Services">
+      <setting name="WebServicePath" value="@_webdir_@" />
+      <setting name="Services">
       <Service name="Simias Enterprise Location Provider" assembly="Simias" enabled="True" type="Thread" class="Simias.Location.EnterpriseLocation" />
+      <Service name="Simias Enterprise Domain Provider" assembly="Simias" enabled="True" type="Thread" class="Simias.EnterpriseProvider" />
       <Service name="Simias Domain Watcher" assembly="Simias" enabled="True" type="Thread" class="Simias.DomainWatcher.Service" />
       <Service name="Simias Change Log Service" assembly="Simias" enabled="True" type="Thread" class="Simias.Storage.ChangeLog" />
       <Service name="Simias Interprocess Event Service" assembly="Simias" enabled="True" type="Thread" class="Simias.Event.IProcEventServer" />
