changed install-exec-plocal to install all instead of SimiasServer.exe
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@3986 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/SimiasServer/Makefile.am
+++ b/simias/src/SimiasServer/Makefile.am
@@ -36,7 +36,7 @@ DEBUG_FILES = SimiasServer.pdb
 endif
 endif
 
-install-exec-local: SimiasServer.exe
+install-exec-local: all
 	$(mkinstalldirs) $(DESTDIR)$(bindir)
 	$(mkinstalldirs) $(DESTDIR)$(webbindir)
 	$(INSTALL_PROGRAM) $(INSTALL_EXE_OPTS) SimiasServer.exe SimiasServer.exe.config $(DEBUG_FILES) $(DESTDIR)$(bindir)
