--- a/simias/configure.in
+++ b/simias/configure.in
@@ -273,10 +273,10 @@ case $SIMIAS_OS in
         #
     	# Override Linux-like directory structure
         #
-    	bindir='$(shell cygpath --mixed ${exec_prefix})'
-    	sbindir='$(shell cygpath --mixed ${exec_prefix})'
-    	libexecdir='$(shell cygpath --mixed ${exec_prefix})'
-    	libdir='$(shell cygpath --mixed ${exec_prefix})'
+    	bindir='${exec_prefix}'
+    	sbindir='${exec_prefix}'
+    	libexecdir='${exec_prefix}'
+    	libdir='${exec_prefix}'
 		StoreProviderAssembly="Simias.dll"
 		StoreProviderType="Simias.Storage.Provider.Flaim.FlaimProvider"
     ;;
