1. Made changes for new authentication handler.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk/simias@4017 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/Simias.csproj
+++ b/Simias.csproj
@@ -404,6 +404,15 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "src\Login\Login.ashx"
+                    BuildAction = "None"
+                />
+                <File
+                    RelPath = "src\Login\Login.ashx.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "src\POBox\Message.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
