new changes for native mDns
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@4021 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/mDnsDomain/mDnsDomain.csproj
+++ b/simias/src/mDnsDomain/mDnsDomain.csproj
@@ -139,6 +139,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "DomainProvider.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "Location.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
