--- a/src/mDnsDomain/mDnsDomain.csproj
+++ b/src/mDnsDomain/mDnsDomain.csproj
@@ -139,6 +139,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "DomainProvider.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "Location.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
