--- a/simias/configure.in
+++ b/simias/configure.in
@@ -448,6 +448,7 @@ src/POBoxWS/Makefile
 src/SyncService/Makefile
 src/SqliteProvider/Makefile
 src/libsimias/Makefile
+src/libsimdezvous/Makefile
 src/mDnsDomain/Makefile
 test/Makefile
 test/ChangeLog/Makefile
