removed mDnsStubs.c from the build worked on new search methods in DomainProvider
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@4038 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/mDnsDomain/mDnsDomain.csproj
+++ b/simias/src/mDnsDomain/mDnsDomain.csproj
@@ -125,7 +125,7 @@
             <Include>
                 <File
                     RelPath = "Auth.cs"
-                    SubType = "Component"
+                    SubType = "Code"
                     BuildAction = "Compile"
                 />
                 <File
