Replaced GetBuddy() with GetBuddyByUserID() since we now store the UserID in blist.xml and can do a very quick search to retrieve the buddy node from XML.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@4039 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/GaimDomain/GaimDomain.csproj
+++ b/simias/src/GaimDomain/GaimDomain.csproj
@@ -144,6 +144,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "GaimDomainService.asmx.resx"
+                    DependentUpon = "GaimDomainService.asmx.cs"
+                    BuildAction = "EmbeddedResource"
+                />
+                <File
                     RelPath = "GaimObjects.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
