enabled the Rendezvous domain by default
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@4107 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/Common/simias-client-bootstrap.config.in
+++ b/simias/src/Common/simias-client-bootstrap.config.in
@@ -8,7 +8,7 @@
       <Service name="Simias Interprocess Event Service" assembly="Simias" enabled="True" type="Thread" class="Simias.Event.IProcEventServer" />
       <Service name="Simias PO Service" assembly="Simias" enabled="True" type="Thread" class="Simias.POBox.POService" />
       <Service name="Simias Sync Client" assembly="Simias" enabled="True" type="Thread" class="Simias.Sync.SyncClient" />
-      <Service name="Rendezvous Workgroup Domain" assembly="Simias.mDns.dll" enabled="False" type="Thread" class="Simias.mDns.Service" />
+      <Service name="Rendezvous Workgroup Domain" assembly="Simias.mDns.dll" enabled="True" type="Thread" class="Simias.mDns.Service" />
       <Service name="Gaim Domain" assembly="Simias.Gaim.dll" enabled="True" type="Thread" class="Simias.Gaim.GaimService" />
     </setting>
   </section>
