--- a/src/Common/simias-client-bootstrap.config.in
+++ b/src/Common/simias-client-bootstrap.config.in
@@ -9,7 +9,7 @@
       <Service name="Simias PO Service" assembly="Simias" enabled="True" type="Thread" class="Simias.POBox.POService" />
       <Service name="Simias Sync Client" assembly="Simias" enabled="True" type="Thread" class="Simias.Sync.SyncClient" />
       <Service name="Rendezvous Workgroup Domain" assembly="Simias.mDns.dll" enabled="True" type="Thread" class="Simias.mDns.Service" />
-      <Service name="Gaim Domain" assembly="Simias.Gaim.dll" enabled="True" type="Thread" class="Simias.Gaim.GaimService" />
+      <Service name="Gaim Workgroup Domain" assembly="Simias.Gaim.dll" enabled="True" type="Thread" class="Simias.Gaim.GaimService" />
     </setting>
   </section>
   <section name="StoreProvider">
