1. Fixed the Enterprise FindPreviousDomainMember to work properly. 2. Fixed ChangeLog to dispose the writer object before deleting the log file. 3. Added unit tests for DomainProvider Member search functions. 4. Added simple methods to enumerate DomainProviders.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@4144 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/test/CollectionStore/Makefile.am
+++ b/simias/test/CollectionStore/Makefile.am
@@ -1,7 +1,7 @@
 # handle Mono secondary dependencies
 export MONO_PATH := $(MONO_PATH):$(DESTDIR)$(libdir)
 
-CollectionStoreTests_CSFILES = $(srcdir)/CollectionStoreTests.cs $(srcdir)/AssemblyInfo.cs
+CollectionStoreTests_CSFILES = $(srcdir)/CollectionStoreTests.cs $(srcdir)/AssemblyInfo.cs $(srcdir)/FindMemberTests.cs
 CollectionStoreTests_CSFILES_CSC := $(subst /,$(SEP),$(CollectionStoreTests_CSFILES))
 CollectionStoreTests_INCLUDES =
 CollectionStoreTests_RESOURCES =
@@ -42,7 +42,7 @@ CLEAN_FILES = $(NUNIT_TESTS) CollectionStoreTests.doc.xml CollectionStoreTests.t
 
 clean-local:
 	rm -rf $(CLEAN_FILES) $(COMMON_CLEAN_FILES)
-    
+
 distclean-local:
 	rm -rf $(COMMON_DISTCLEAN_FILES)
 
