1. Removed the InviteInterval functionality. The POBox will now sync at the same interval as other collections. 2. Started adding the local web service authentication functionality. 3. Changed an exception string in DomainAgent.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk/simias@4172 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/Simias.csproj
+++ b/Simias.csproj
@@ -309,6 +309,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "src\DomainProvider\LocalProvider.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "src\DomainWatcher\DomainWatcher.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
@@ -464,11 +469,6 @@
                 />
                 <File
                     RelPath = "src\Policy\FileTypeFilter.cs"
-                    SubType = "Code"
-                    BuildAction = "Compile"
-                />
-                <File
-                    RelPath = "src\Policy\InviteInterval.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
                 />
