--- a/Simias.csproj
+++ b/Simias.csproj
@@ -244,6 +244,11 @@
                     BuildAction = "Compile"
                 />
                 <File
+                    RelPath = "src\Common\CertificateStore.cs"
+                    SubType = "Code"
+                    BuildAction = "Compile"
+                />
+                <File
                     RelPath = "src\Common\Configuration.cs"
                     SubType = "Code"
                     BuildAction = "Compile"
