bug #74750 bug #75186 bug #74741 certificate handling
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@4226 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/simias/src/WebService/web.config
+++ b/simias/src/WebService/web.config
@@ -11,7 +11,10 @@
 	<system.web>
 		<customErrors mode="Off"/>
 
-    <httpRuntime maxRequestLength="1048576" />
+    <httpRuntime
+		executionTimeout="180"
+		maxRequestLength="1048576"
+	/>
     
 <!-- take this out until we need it
 	<webServices>
