--- a/src/WebService/web.config
+++ b/src/WebService/web.config
@@ -11,7 +11,10 @@
 	<system.web>
 		<customErrors mode="Off"/>
 
-    <httpRuntime maxRequestLength="1048576" />
+    <httpRuntime
+		executionTimeout="180"
+		maxRequestLength="1048576"
+	/>
     
 <!-- take this out until we need it
 	<webServices>
