Fix so that InstallUtil.exe.config gets copied to the correct location.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@4227 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/src/FormsTrayApp/Makefile.am
+++ b/ifolder/src/FormsTrayApp/Makefile.am
@@ -20,7 +20,7 @@ RESX_FILES = FormsTrayApp.resx GlobalProperties.resx ServerInfo.resx AcceptInvit
 
 PROJECT_FILES = $(srcdir)/FormsTrayApp.csproj $(srcdir)/FormsTrayApp.sln
 
-EXTRA_DIST = $(iFolderApp_CSFILES) $(DATA_FILES) $(RES_FILES) $(RESX_FILES) iFolderApp.exe.manifest iFolderApp.exe.config $(PROJECT_FILES)
+EXTRA_DIST = $(iFolderApp_CSFILES) $(DATA_FILES) $(RES_FILES) $(RESX_FILES) iFolderApp.exe.manifest iFolderApp.exe.config InstallUtil.exe.config $(PROJECT_FILES)
 
 if MAKE_DOC_FILE
 DOC_FILE = $(basename $@).doc.xml
