added install-util and uninstall-util targets
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@4234 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/src/FormsTrayApp/Makefile.am
+++ b/ifolder/src/FormsTrayApp/Makefile.am
@@ -42,15 +42,24 @@ DEBUG_FILES = iFolderApp.pdb
 endif
 endif
 
+install-util:
+	if ! test -f "$(DESTDIR)$(bindir)/iFolderApp.exe"; then \
+		echo "run 'make install' before 'make install-util'"; \
+		exit 1; \
+	fi
+	$(INSTALLUTIL) /LogToConsole=false /ShowCallStack /LogFile=iFolderApp.InstallLog `cygpath --windows "$(DESTDIR)$(bindir)/iFolderApp.exe"`
+
+uninstall-util:
+	if test -f "$(DESTDIR)$(bindir)/iFolderApp.exe"; then \
+		$(INSTALLUTIL) /uninstall /LogToConsole=false /ShowCallStack /LogFile=iFolderApp.UninstallLog `cygpath --windows "$(DESTDIR)$(bindir)/iFolderApp.exe"`; \
+	fi
+
 install-exec-local: iFolderApp.exe $(DATA_FILES)
 	$(mkinstalldirs) $(DESTDIR)$(bindir)
 	$(mkinstalldirs) $(DESTDIR)$(bindir)/res
 	$(INSTALL_PROGRAM) iFolderApp.exe iFolderApp.exe.manifest iFolderApp.exe.config $(DEBUG_FILES) $(DESTDIR)$(bindir)
 	$(INSTALL_PROGRAM) $(DATA_FILES) $(DESTDIR)$(bindir)
 	$(INSTALL_PROGRAM) $(RES_FILES) $(DESTDIR)$(bindir)/res
-	if test -f "$(DESTDIR)$(bindir)/iFolderApp.exe"; then \
-		$(INSTALLUTIL) /LogToConsole=false /ShowCallStack /LogFile=iFolderApp.InstallLog `cygpath --windows "$(DESTDIR)$(bindir)/iFolderApp.exe"`; \
-	fi
 if WINDOWS
 if DEBUG	
 	$(INSTALL_PROGRAM) $(PROJECT_FILES) $(DESTDIR)$(bindir)
@@ -58,9 +67,6 @@ endif
 endif
 
 uninstall-local:
-	if test -f "$(DESTDIR)$(bindir)/iFolderApp.exe"; then \
-		$(INSTALLUTIL) /uninstall /LogToConsole=false /ShowCallStack /LogFile=iFolderApp.UninstallLog `cygpath --windows "$(DESTDIR)$(bindir)/iFolderApp.exe"`; \
-	fi
 	cd $(DESTDIR)$(bindir); rm -f iFolderApp.exe iFolderApp.exe.manifest iFolderApp.exe.config $(DEBUG_FILES)
 	cd $(DESTDIR)$(bindir); rm -f $(DATA_FILES)
 	cd $(DESTDIR)$(bindir)/res; rm -f $(RES_FILES:res/%=%) ifolder-banner.png ifolder-banner-scaler.png newifolder24.png share24.png sync24.png setup24.png
