Support install-util and uninstall-util targets from top-level make.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@4246 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/src/Makefile.am
+++ b/ifolder/src/Makefile.am
@@ -18,6 +18,11 @@ dist-hook:
 
 EXTRA_DIST = $(srcdir)/ifolder-snakeoil.keys images
 
+install-util uninstall-util:
+if WINDOWS
+	$(MAKE) -C FormsTrayApp $@
+endif
+
 register unregister:
 if WINDOWS
 	$(MAKE) -C iFolderShell $@
