--- a/src/WebService/SimiasWebService.csproj
+++ b/src/WebService/SimiasWebService.csproj
@@ -17,7 +17,7 @@
                 DelaySign = "false"
                 OutputType = "Library"
                 PreBuildEvent = ""
-                PostBuildEvent = "if not exist $(SolutionDir)stage mkdir $(SolutionDir)stage&#xd;&#xa;if not exist $(SolutionDir)stage\web mkdir $(SolutionDir)stage\web&#xd;&#xa;if not exist $(SolutionDir)stage\web\bin mkdir $(SolutionDir)stage\web\bin&#xd;&#xa;copy $(TargetFileName) $(SolutionDir)stage\web\bin&#xd;&#xa;if exist $(TargetName).pdb copy $(TargetName).pdb $(SolutionDir)stage\web\bin&#xd;&#xa;copy $(ProjectDir)Global.asax $(SolutionDir)stage\web&#xd;&#xa;copy $(ProjectDir)SimiasBrowser.asmx $(SolutionDir)stage\web&#xd;&#xa;copy $(ProjectDir)Simias.asmx $(SolutionDir)stage\web&#xd;&#xa;copy $(ProjectDir)web.config $(SolutionDir)stage\web"
+                PostBuildEvent = "if not exist $(SolutionDir)stage mkdir $(SolutionDir)stage&#xd;&#xa;if not exist $(SolutionDir)stage\web mkdir $(SolutionDir)stage\web&#xd;&#xa;if not exist $(SolutionDir)stage\web\bin mkdir $(SolutionDir)stage\web\bin&#xd;&#xa;copy $(TargetFileName) $(SolutionDir)stage\web\bin&#xd;&#xa;if exist $(TargetName).pdb copy $(TargetName).pdb $(SolutionDir)stage\web\bin&#xd;&#xa;copy $(ProjectDir)Global.asax $(SolutionDir)stage\web&#xd;&#xa;copy $(ProjectDir)SimiasBrowser.asmx $(SolutionDir)stage\web&#xd;&#xa;copy $(ProjectDir)Simias.asmx $(SolutionDir)stage\web&#xd;&#xa;copy $(ProjectDir)win.web.config $(SolutionDir)stage\web\web.config"
                 RootNamespace = "Simias.Web"
                 RunPostBuildEvent = "OnBuildSuccess"
                 StartupObject = ""
