Created custom ToolBar for My iFolders dialog.
git-svn-id: svn://svn.code.sf.net/p/simias/code/trunk@4267 1a4d904c-e006-0410-be0b-b506c45ff692

--- a/ifolder/src/FormsTrayApp/FormsTrayApp.csproj
+++ b/ifolder/src/FormsTrayApp/FormsTrayApp.csproj
@@ -277,6 +277,16 @@
                     DependentUpon = "SyncLog.cs"
                     BuildAction = "EmbeddedResource"
                 />
+                <File
+                    RelPath = "ToolBarEx.cs"
+                    SubType = "Component"
+                    BuildAction = "Compile"
+                />
+                <File
+                    RelPath = "ToolBarEx.resx"
+                    DependentUpon = "ToolBarEx.cs"
+                    BuildAction = "EmbeddedResource"
+                />
             </Include>
         </Files>
     </CSHARP>
